# awesome-ai-apps

./: README.md
starter_ai_agents/microsoft_agents_starter/: README.md  pyproject.toml
starter_ai_agents/microsoft_agents_starter/.monocle/: monocle_trace_okahu_demos_ms_openai_concurrent_travel_74d8fd8b49678022698b5d61aad37dac_2026-06-11_15.02.14.json  monocle_trace_okahu_demos_ms_openai_groupchat_travel_309ea6131cbf6f3baa63342285812aa3_2026-06-11_15.02.54.json  monocle_trace_okahu_demos_ms_openai_handoff_travel_a262a1005533d3dc6fd375c37d31ee95_2026-06-11_14.59.02.json  monocle_trace_okahu_demos_ms_openai_handoff_travel_a262a1005533d3dc6fd375c37d31ee95_2026-06-11_15.00.02.json  monocle_trace_okahu_demos_ms_openai_handoff_travel_a262a1005533d3dc6fd375c37d31ee95_2026-06-11_15.01.07.json  monocle_trace_okahu_demos_ms_openai_sequential_travel_c68417ff7cfe2389011fbc2104b382f5_2026-06-11_13.42.02.json  monocle_trace_okahu_demos_ms_openai_travel_agent_70b101e041d86b7a15460df7f4f4de64_2026-06-11_12.25.36.json  monocle_trace_okahu_demos_ms_openai_travel_agent_91a6b83d0ec4d895ce67d40d5cd9e1e1_2026-06-11_12.24.12.json  monocle_trace_okahu_demos_ms_openai_travel_agent_933ec10a2f3efc9ba59b3929e3d6bddc_2026-06-11_13.22.52.json  monocle_trace_okahu_demos_ms_openai_travel_agent_ca9d31ffd24a0a22c754d20df0e0b7b0_2026-06-11_13.22.57.json
starter_ai_agents/microsoft_agents_starter/agents/: multi_travel_agents.py  travel_agents.py
starter_ai_agents/microsoft_agents_starter/agents/orchestrations/: concurrent_travel.py  group_chat_travel.py  handoff_travel.py  magentic_travel.py  (+1 more)
(+1 files in other folders)
